<resources>
    <string name="app_name">CovidMVI</string>

    <string name="more">More</string>

    <string name="cases">Cases</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>

    <string name="world">World</string>
    <string name="continents">Continents</string>
    <string name="filter">Filter</string>
    <string name="today">Today</string>
    <string name="per_one_million">Per one million</string>
    <string name="affected_countries">Affected countries</string>
    <string name="tests">Tests</string>

<!--    Layout Graph with buttons-->
    <string name="title_two_weeks">2W</string>
    <string name="title_one_month">1M</string>
    <string name="title_six_months">6M</string>
    <string name="title_one_year">1Y</string>
    <string name="title_all">ALL</string>
<!--    END Layout Graph with buttons-->

</resources>